# canopie25-paper-artifacts

./: SPEC.md
boxy/: .gitignore  AIRGAP.md  ARCHITECTURE.md  COOKBOOK-NEMOTRON3.md  Containerfile  Containerfile.slim  DEMO-chisel-runbook.md  DEMO-chisel.md  DEMO-turnkey.md  DEMO.md  LICENSE  Makefile  PRIVATE-REPO.md  README.md  RELEASING.md  RUNBOOK-TONIGHT.md  RUNBOOK.md  VALIDATION.md  pyproject.toml
boxy/.github-export/workflows/: ci.yml  release.yml
boxy/archive/: DEMO-chisel-runbook.md
boxy/deploy/openshift/chart-flux-mcp/: Chart.yaml  values.yaml
boxy/deploy/openshift/chart-flux-mcp/templates/: deployment.yaml
boxy/deploy/openshift/chart-gateway/: Chart.yaml  Dockerfile.gateway  values.yaml
boxy/deploy/openshift/chart-gateway/templates/: gateway.yaml
boxy/deploy/openshift/chart-headscale/: Chart.yaml  README.md  install.sh  uninstall.sh  values.yaml
boxy/deploy/openshift/chart-headscale/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  pvc.yaml  route.yaml  secret.yaml  service.yaml
boxy/deploy/openshift/chart-relay/: Chart.yaml  Containerfile  deploy-relay.sh  values.yaml
boxy/docs/: 01-serve-gpu-model.md  02-serve-remote-nongpu-model.md  03-share-with-chisel.md  04-airgap.md  06-runbook.md  07-validation.md  08-releasing.md  10-spec.md  11-colocation-design.md  12-benchmark-and-plot.md  README.md
boxy/examples/: MATRIX.md
boxy/examples/boxes/: llamacpp-demo.toml  vllm-hf.toml  vllm.toml
boxy/examples/locations/: eldorado.toml  flux-docker-rocm.toml  flux-podman-rocm.toml  hops.toml
boxy/hack/: gen_matrix.py  make_tiny_gguf.py
boxy/scripts/: make-standalone-repo.sh
boxy/src/boxy/: __init__.py  __main__.py  airgap.py  appcards.py  bench.py  bench_backends.py  box.py  cardgen.py  cards.py  cli.py  cloud.py  config.py  deploy.py  diagnostics.py  distributed.py  doctor.py  engines.py  envs.py  headscale.py  jobs.py  lb.py  location.py  mcp.py  picker.py  plotting.py  policy.py  push.py  ramalama_shim.py  readiness.py  registries.py  remote.py  resolve.py  results.py  router.py  s3.py  site.py  sky_export.py
boxy/src/boxy/backends/: __init__.py  apptainer.py  base.py  charliecloud.py  docker.py  podman.py
boxy/src/boxy/data/: __init__.py
boxy/src/boxy/data/examples/: MATRIX.md
boxy/src/boxy/exposers/: __init__.py  base.py  gateway.py  hosts.py  relay.py
boxy/src/boxy/schedulers/: __init__.py  base.py  flux.py  none_.py  slurm.py
boxy/tests/: conftest.py  test_agentless.py  test_airgap.py  test_appcards.py  test_backends.py  test_bench_and_cloud.py  test_bench_backends.py  test_bench_serving.py  test_box_location.py  test_capability_matrix.py  test_cardgen.py  test_cards.py  test_charliecloud.py  test_cli_dryrun.py  test_config.py  test_degraded_and_live.py  test_deploy_matrix.py  test_distributed.py  test_doctor.py  test_example_matrix.py  test_examples.py  test_exposers.py  test_field_findings.py  test_flux_and_diagnostics.py  test_gap_regressions.py  test_gateway.py  test_headscale.py  test_last_mile.py  test_lb.py  test_mcp.py  test_picker.py  test_plot.py  test_portability.py  test_progress.py  test_push.py  test_readiness.py  test_registries.py  test_remote.py  test_replicas.py  test_results_store.py  (+12 more)
(+71 files in other folders)
